[package]
name = "petal-neighbors"
version = "0.4.0"
description = "Nearest neighbor search algorithms including a ball tree and a vantage point tree."
readme = "README.md"
homepage = "https://github.com/petabi/petal-neighbors"
repository = "https://github.com/petabi/petal-neighbors"
license = "Apache-2.0"
keywords = ["nearest-neighbor", "knn", "ball-tree", "vantage-point"]
categories = ["algorithms", "data-structures"]
authors = [
    "Min Kim <msk@dolbo.net>",
    "Min Shao <min.shao1988@gmail.com>"
]
edition = "2018"
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/petal-neighbors", service = "github" }

[dependencies]
ndarray = "0.13"
num-traits = "0.2"
thiserror = "1"

[dev-dependencies]
approx = "0.3"
criterion = "0.3"
ndarray-rand = "0.11"

[[bench]]
name = "ball_tree"
harness = false
