[package]
name = "petal-neighbors"
version = "0.8.0"
description = "Nearest neighbor search algorithms including a ball tree and a vantage point tree."
readme = "README.md"
documentation = "https://docs.rs/petal-neighbors"
homepage = "https://github.com/petabi/petal-neighbors"
repository = "https://github.com/petabi/petal-neighbors"
license = "Apache-2.0"
keywords = ["nearest-neighbor", "knn", "ball-tree", "vantage-point"]
categories = ["algorithms", "data-structures"]
authors = [
    "Min Kim <msk@dolbo.net>",
    "Min Shao <min.shao1988@gmail.com>"
]
edition = "2018"
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/petal-neighbors", service = "github" }

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
ordered-float = "3"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
criterion = "0.3"
ndarray-rand = "0.14.0"

[[bench]]
name = "ball_tree"
harness = false
